# ThunkLib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: list.c  list.h
src/: Base.h  Core.h  core.h  data_utils.h  main.c  main.cpp  primitive.c  primitive.h  thunk.c  thunk.h  utils.h
src/Base/: Primitive.h  Thunk.cpp  Thunk.h
src/Base/Utils/: Lang.h  Mem.h
src/Core/: Operator.c  Operator.h  Operators.c  Operators.h  Primitive.c  Primitive.cpp  Primitive.h  Primitives.c  Primitives.h  Thunk.c  Thunk.cpp  Thunk.h  Thunks.c  Thunks.h  Types.c  Types.h  Utils.h  idx.h
src/Core/Utils/: Lang.h  Macro.h  Mem.h  Typedefs.h  idx.h
src/Data/: List.c  List.cpp  List.h
src/core/: primitive.c  primitive.h  thunk.c  thunk.h  utils.h
src/core/utils/: lang_utils.h  mem_utils.h
